--- a/shared/lib/css/ng-table.css
+++ b/shared/lib/css/ng-table.css
@@ -36,6 +36,18 @@
   border-right: 4px solid transparent;
   border-top: 4px solid #000;
 }
+.ng-table th.sortable.sortable-right div {
+  padding-left:0;
+  padding-right: 15px;
+  display: inline-block;
+   width: auto;
+ }
+ .ng-table th.sortable.sortable-right div:after,
+ .ng-table th.sortable.sortable-right div:before {
+   right: 0;
+   left: auto;
+ }
+
 .ng-table th.sortable div:hover:after,
 .ng-table th.sortable div:hover:before {
   opacity: 1;
