--- a/admin/partials/hotel/adHotelDetails.html
+++ b/admin/partials/hotel/adHotelDetails.html
@@ -519,6 +519,13 @@
 				</div>
 				<div class="entry full-width"></div>
 
+                <div class="entry" ng-if="data.payment_gateway === 'CBA'" >
+                    <label>
+                        Default Opera Payment Type
+                    </label>
+                    <input type="text" ng-model="data.cba_default_payment_type">
+                </div>
+
 				<div class="entry" ng-if="data.payment_gateway === 'SAFERPAY'" >
 					<label>
 						Saferpay ACCOUNT ID
