--- a/admin/partials/interfaces/Duetto/adDuettoSetup.html
+++ b/admin/partials/interfaces/Duetto/adDuettoSetup.html
@@ -4,7 +4,7 @@
         <h3><span translate>DUETTO_SUB_TITLE</span></h3>
     </div>
     <div class="entry full-width">
-        <label><span translate>DUETTO_ACTIVATE_INACTIVATE</span></label>
+        <label><span translate>ACTIVATE_INACTIVATE</span></label>
         <div name="active-inactive-toggle" class="switch-button single" ng-class="{ on: config.enabled }"
              ng-click="toggleEnabled()">
             <input type="checkbox">
