CICO-35069 Revinate API Integration
CICO-33121 Duetto configuration key name changes integrated

--- a/admin/partials/interfaces/Revinate/adRevinateSetup.html
+++ b/admin/partials/interfaces/Revinate/adRevinateSetup.html
@@ -1,7 +1,7 @@
 <ad-common-parts-in-form-dir on-save-button-click="saveInterfaceConfig"
-                             header-caption="{{'DUETTO_SETUP_HEADER'|translate}}">
+                             header-caption="{{'REVINATE_SETUP_HEADER'|translate}}">
     <div class="form-title full-width">
-        <h3><span translate>DUETTO_SUB_TITLE</span></h3>
+        <h3><span translate>REVINATE_SUB_TITLE</span></h3>
     </div>
     <div class="entry full-width">
         <label><span translate>ACTIVATE_INACTIVATE</span></label>
@@ -14,8 +14,8 @@
 
     <fieldset class="holder left">
         <ad-textbox inputtype="text"
-                    value="config.hotel_code"
-                    label="{{'HOTEL_CODE'| translate}}"
+                    value="config.system_id"
+                    label="{{'REVINATE_SYSTEM_ID'| translate}}"
                     styleclass="full-width"></ad-textbox>
         <ad-textbox inputtype="text"
                     value="config.end_point"
