--- a/stylesheets/less/app/screens/22.diary-nightly.less
+++ b/stylesheets/less/app/screens/22.diary-nightly.less
@@ -30,7 +30,13 @@
 
         &:focus,
         &:active {
-            overflow: visible;
+
+            &.with-icon {
+                &.only-icon {
+                    overflow: visible;
+                }
+            }
+            
         }
 
         &.active {
@@ -458,7 +464,7 @@
     /* Grid - Timeline ***/
     .grid-timeline {
         background-color: @gcard;
-        z-index: 200;
+        z-index: 0;
         .box-shadow(0 1px 2px rgba(0,0,0,.2));
         .size(40px, 100%);
         #flexbox > .parent(row wrap, '', '', '');
@@ -523,6 +529,10 @@
                 height: 9999px;
                 .show();
             }
+        }
+
+        .weekend {
+            background-color: rgba(95,131,146,1);
         }
     }
 
@@ -711,6 +721,11 @@
                 left:0 !important;
                 background-position: 4px -6895px;
             }
+        }
+
+        /* Clickable reservations ***/
+        &:not(.oos):not(.ooo):not(.blocked):not(.departed) {
+            cursor: pointer;
         }
 
         /* Reservation Status ***/
