--- a/rover/partials/nightlyDiary/rvNightlyDiaryTimeline.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiaryTimeline.html
@@ -1,8 +1,8 @@
 <div class="grid-dates">
     <!-- If showing 7 days -->
-    <div ng-if="diaryData.isSevenMode" class="day" ng-repeat="item in diaryData.datesGridData">
-        <span>{{ item | date: 'EEEE' }}</span>
-        <strong>{{ item | date: 'MMMM dd' }}</strong>
+    <div ng-if="diaryData.isSevenMode" class="day" ng-repeat="item in diaryData.datesGridData" ng-class="{ 'today':(item.date === diaryData.businessDate ) , 'weekend': item.isWeekend }" >
+        <span>{{ item.date | date: 'EEEE' }}</span>
+        <strong>{{ item.date | date: 'MMMM dd' }}</strong>
     </div>
 
     <!-- If showing 21 days -->
