--- a/rover/partials/socialLobby/rvSLPosts.html
+++ b/rover/partials/socialLobby/rvSLPosts.html
@@ -42,7 +42,7 @@
                     <figure class="guest-image">
                         <img src="{{post.user.image_url}}" alt="" />
                         
-                        <!-- If VIP - <span class="vip">VIP</span> -->
+                        <span class="vip" ng-show="post.user.is_vip">VIP</span>
                     </figure>
                     <div class="post-data">
                         <div class="author">
