CICO-35069 Adding Hotel code to Revinate Settings

--- a/admin/partials/interfaces/Revinate/adRevinateSetup.html
+++ b/admin/partials/interfaces/Revinate/adRevinateSetup.html
@@ -14,6 +14,10 @@
 
     <fieldset class="holder left">
         <ad-textbox inputtype="text"
+                    value="config.hotel_code"
+                    label="{{'HOTEL_CODE'| translate}}"
+                    styleclass="full-width"></ad-textbox>
+        <ad-textbox inputtype="text"
                     value="config.system_id"
                     label="{{'REVINATE_SYSTEM_ID'| translate}}"
                     styleclass="full-width"></ad-textbox>
