CICO-34592 fixed the lengthy comments issue

--- a/rover/partials/socialLobby/rvSLComments.html
+++ b/rover/partials/socialLobby/rvSLComments.html
@@ -26,7 +26,7 @@
 
                                             <span class="posted">{{comment.created_at}}</span>
                                         </div>
-                                        <h4 class="post" ng-class="{'staff': comment.user_role != 'guest'}"> <!-- If this is a 2nd level unread post, add class 'unread'. If staff post, add class 'staff'. If entered / left the lobby post, add class 'appearance' -->
+                                        <h4 class="post post-full" ng-class="{'staff': comment.user_role != 'guest'}"> <!-- If this is a 2nd level unread post, add class 'unread'. If staff post, add class 'staff'. If entered / left the lobby post, add class 'appearance' -->
                                             {{comment.comment}}
                                         </h4>
                                     </div>
