CICO-34592 updated the profession and works at display

--- a/rover/partials/socialLobby/rvSLComments.html
+++ b/rover/partials/socialLobby/rvSLComments.html
@@ -15,8 +15,7 @@
                                             <h3>{{comment.author_name}}</h3>
                                             <!-- If not staff member, output job details (if they exist) -->
                                             
-                                            <span class="job-title" ng-if="comment.user.works_at != '' && comment.user.works_at != null">{{comment.user.profession + ', ' + comment.user.works_at}}</span> 
-                                            <span class="job-title" ng-if="comment.user.works_at == '' || comment.user.works_at == null">{{comment.user.profession}}</span>
+                                            <span class="job-title" >{{getProfessionStringForUser(comment.user)}}</span> 
                                             <!-- If they exist, output Company / TA 7 Group / Allotment name -->
                                             <!-- <em class="icons icon-{'guest-company' or 'guest-travelagent' or 'group' or 'allotment'}">{Name}</em> -->
                                             <!-- If not staff member, show Stay Card link -->
