Fix for CICO-31726

--- a/admin/partials/rulesRestriction/adCancellationPenaltiesRules.html
+++ b/admin/partials/rulesRestriction/adCancellationPenaltiesRules.html
@@ -105,9 +105,9 @@
 											</select>
 										</div>
 										<div class="select select-col col1-3">
-											<select ng-model="singleRule.advance_min" name="hotel-checkin-minute" id="hotel-checkin-minutes">
+											<select ng-model="singleRule.advance_minute" name="hotel-checkin-minute" id="hotel-checkin-minutes">
 												<option value="" data-text="Not set" class="placeholder" translate>MM</option>
-												<option ng-repeat="i in [0, 45, 15, 2] | makeRange" value="{{i}}" ng-selected="i==singleRule.advance_min" >{{i}}</option>
+												<option ng-repeat="i in [0, 45, 15, 2] | makeRange" value="{{i}}" ng-selected="i==singleRule.advance_minute" >{{i}}</option>
 											</select>
 										</div>
 										<div class="select select-col col1-3">
