--- a/admin/partials/checkin/adCheckin.html
+++ b/admin/partials/checkin/adCheckin.html
@@ -393,6 +393,28 @@
                     </div>
                     <ad-textarea rows="4" div-class="full-width" text-area-class="full-width" value="checkinData.checkin_alert_message" label="{{ 'CHECKIN_ALERT' | translate}}" placeholder="" ng-show="hideAddOption"></ad-textarea>
                 </fieldset>
+                <!-- Second Auth options -->
+                <fieldset class="holder full-width">
+                    <div class="form-title">
+                        <h3><span translate="">URL_CHECKIN_SECOND_AUTH_HEADING</span> </h3>
+                    </div>
+                    <div class="form-subtitle-title">
+                        <h6><span translate="">URL_CHECKIN_SECOND_AUTH_SUB_HEADING</span> </h6>
+                    </div>
+                    <div id="options" class="entry">
+                        <label>
+                            {{ 'CHECKIN_SECOND_AUTH_FACTOR' | translate}}
+                        </label>
+                        <label class="radio" ng-class="{'checked':checkinData.zest_web_checkin_second_authentication_action == 'conf_num'}">
+                            <span class="icon-form icon-radio " ng-class="{checked:checkinData.zest_web_checkin_second_authentication_action == 'conf_num'}"></span>
+                            <input type="radio" value="conf_num" ng-model="checkinData.zest_web_checkin_second_authentication_action"> {{ 'CONFIRMATION_NUMBER' | translate}}
+                        </label>
+                        <label class="radio" ng-class="{'checked':checkinData.zest_web_checkin_second_authentication_action == 'conf_num_and_depart_date'}">
+                            <span class="icon-form icon-radio " ng-class="{checked:checkinData.zest_web_checkin_second_authentication_action == 'conf_num_and_depart_date'}"></span>
+                            <input type="radio" value="conf_num_and_depart_date" ng-model="checkinData.zest_web_checkin_second_authentication_action"> {{ 'CONF_NUMBER_AND_DEPART_DATE' | translate}}
+                        </label>
+                    </div>
+                </fieldset>
                 <!-- room key communication options -->
                 <fieldset class="holder left">
                     <div class="form-title half-width-title">
