--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -1416,6 +1416,16 @@
     z-index: 999;
 }
 
+
+.timer-debugger{
+    float: right;
+    left: 5%;
+    position: absolute;
+    color: #d8d8d8;
+    z-index: 999;
+}
+
+
 .add-guest-mode-content{
     height: 75% !important;
     margin-top: 50px;
