--- a/admin/partials/IFCComtrol/adIFCComtrolSetup.html
+++ b/admin/partials/IFCComtrol/adIFCComtrolSetup.html
@@ -24,9 +24,9 @@
                     <fieldset class="holder left">
                         <ad-textbox inputtype="text" value="ifc_comtrol.url" name="url" id="url" label="{{'IFC_COMTROL_URL' | translate}}" styleclass="full-width" ng-if="ifc_comtrol.enabled"></ad-textbox>
                     </fieldset>
-                    <fieldset class="holder right">
+                    <fieldset class="holder full-width">
                         <ad-textbox inputtype="text" value="ifc_comtrol.authentication_token" name="authentication-token" id="authentication-token" label="{{'IFC_COMTROL_AUTHENTICATION_TOKEN' | translate}}"
-                                    disabled="true">
+                                    readonly="yes">
                         </ad-textbox>
                         <button type="button" style="margin: 24px 0 0 10px" class="button blue sm-refresh-btn" ng-click="onClickRegenerate()">
                             REGENERATE
