CICO-35075 admin settings

--- a/admin/partials/checkin/adCheckin.html
+++ b/admin/partials/checkin/adCheckin.html
@@ -438,6 +438,7 @@
                             <input type="radio" value="email_and_text" ng-model="checkinData.guest_delivery_communication"> {{ 'EMAIL_AND_TEXT_MESSAGE' | translate}}
                         </label>
                     </div>
+                    <ad-toggle-button is-checked="checkinData.zest_web_always_ask_for_mobile_number" label="{{ 'ALWAYS_ASK_FOR_MOBILE_NUMBER' | translate}}" div-class="full-width"></ad-toggle-button>
                 </fieldset>
                 <fieldset class="holder right">
                     <div class="form-title half-width-title">
