--- a/rover/partials/nightlyDiary/rvNightlyDiaryTimeline.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiaryTimeline.html
@@ -1,6 +1,6 @@
 <!-- If showing 7 days -->
-<div class="grid-dates" ng-show="diaryData.isSevenSelected" >
-    <div class="day" ng-repeat="item in diaryData.datesGridData" ng-class="{ 'today':(item.date === diaryData.businessDate ) , 'weekend': item.isWeekend }" >
+<div class="grid-dates" ng-show="diaryData.isSevenSelected">
+    <div class="day" ng-repeat="item in diaryData.datesGridData | limitTo: 7" ng-class="{ 'today':(item.date === diaryData.businessDate ) , 'weekend': item.isWeekend }" >
         <span>{{ item.date | date: 'EEEE' }}</span>
         <strong>{{ item.date | date: 'MMMM dd' }}</strong>
     </div>
@@ -19,14 +19,16 @@
 
     <!-- If dates span over multiple months -->
     <div class="month" ng-show="diaryData.hasMultipleMonth">
-        <strong>{{ diaryData.fromDate | date: 'MMMM yyyy' }}</strong>
+        <strong ng-if="diaryData.firstMonthDateList.length > 2">{{ diaryData.fromDate | date: 'MMMM yyyy' }}</strong>
+        <strong ng-if="diaryData.firstMonthDateList.length <= 2"></strong>
         <div class="days">
             <span ng-repeat="item in diaryData.firstMonthDateList" class="day" ng-class="{ 'today':(item.date === diaryData.businessDate ) , 'weekend': item.isWeekend }">{{ item.date | date: 'dd' }}</span>
         </div>
     </div>
 
     <div class="month" ng-show="diaryData.hasMultipleMonth">
-        <strong>{{ diaryData.toDate | date: 'MMMM yyyy' }}</strong>
+        <strong ng-if="diaryData.secondMonthDateList.length > 2">{{ diaryData.toDate | date: 'MMMM yyyy' }}</strong>
+        <strong ng-if="diaryData.secondMonthDateList.length <= 2"></strong>
         <div class="days">
             <span ng-repeat="item in diaryData.secondMonthDateList" class="day" ng-class="{ 'today':(item.date === diaryData.businessDate ) , 'weekend': item.isWeekend }">{{ item.date | date: 'dd' }}</span>
         </div>
