--- a/rover/partials/socialLobby/rvSLComments.html
+++ b/rover/partials/socialLobby/rvSLComments.html
@@ -1,7 +1,7 @@
 <!-- If post has replies-->
 <div class="conversation "  ng-controller="RVSocialLobbyCommentsCrl"> <!-- Toggle class 'hidden' to show/hide when L55 is tapped/clicked -->
 
-        <div class="conversation-wrapper">    
+        <div class="conversation-wrapper" iscroll-stop-propagation>    
             <div ng-iscroll='comment-list-scroll' class="scrollable neighbours-comment-scroll" >
                 <div class="wrapper neighbours-comment-container" >
                     <div class="reply-post " ng-repeat="comment in comments">
