CICO-35175 Fix comment area color

--- a/guestweb/common_css/conscious_vondelpark/theme.less
+++ b/guestweb/common_css/conscious_vondelpark/theme.less
@@ -93,7 +93,7 @@ a,a:hover,.main-text,
     color:#6c7f01;
 }
 textarea.sub-text, textarea.sub-text:hover{
-  color:#fff !important;
+  color:#000 !important;
 }
 
 /*----------------- date picker -------------------------*/
