--- a/stylesheets/less/app/screens/01.availability.less
+++ b/stylesheets/less/app/screens/01.availability.less
@@ -153,7 +153,7 @@
 
             .select {
                 width: 160px;
-                margin: 10px 0 10px 10px;
+                margin-right: 10px;
                 .pull-left;
 
                 select,
