CICO-34761 - Availability print stlye fix

--- a/stylesheets/less/app/07_print.less
+++ b/stylesheets/less/app/07_print.less
@@ -294,8 +294,7 @@
     
     /* Hide everything except availability ***/
     .availability-print {
-        .page,
-        .page.page-current,
+        .container,
         .availability-header,
         .availability-toggle {
             display: none !important;
