--- a/stylesheets/less/app/01-B_variables.less
+++ b/stylesheets/less/app/01-B_variables.less
@@ -62,8 +62,8 @@
 @success:           url("@{images}/app/success.png");
 @success2x:         url("@{images}/app/success@2x.png");
 
-@diaryGrid7:        url("@{images}/diary-7.svg");
-@diaryGrid21:       url("@{images}/diary-21.svg");
+@diaryGrid7:        url("@{images}/app/diary-7.svg");
+@diaryGrid21:       url("@{images}/app/diary-21.svg");
 
 /* 4. LAYOUT
 ==========================================================*/
