CICO-34967 adding missing translations

--- a/admin/partials/checkin/adCheckin.html
+++ b/admin/partials/checkin/adCheckin.html
@@ -230,7 +230,7 @@
                             <h3 class="with-count">
                 <!-- add .active if more than 0 -->
                 <span class="count" ng-class="{'active' : checkinEmailRoomExclusionConfig.noOfItemsSelected > 0}"> {{checkinEmailRoomExclusionConfig.noOfItemsSelected}} </span>
-                                                CHECKIN EMAIL ROOM EXCLUSION SETTINGS
+                                               {{'CHECKIN_EMAIL_ROOM_EXCLUSION_SETTINGS' | translate}}
                 </h3>
                             <div class="toggle-arrows" ng-click="toggleRoomExlusionSettings(!openRoomExclusionSettings)">
                                 <img class="toggle-down" src="/assets/cssimg/arrow-down.png">
