--- a/admin/partials/checkout/adCheckout.html
+++ b/admin/partials/checkout/adCheckout.html
@@ -232,7 +232,7 @@
 		                            <h3 class="with-count">
 		                <!-- add .active if more than 0 -->
 		                <span class="count" ng-class="{'active' : checkoutEmailRoomExclusionConfig.noOfItemsSelected > 0}"> {{checkoutEmailRoomExclusionConfig.noOfItemsSelected}} </span>
-		                                                CHECKOUT EMAIL ROOM EXCLUSION SETTINGS
+		                                                {{'CHECKOUT_EMAIL_ROOM_EXCLUSION_SETTINGS' | translate}}
 		                </h3>
 		                            <div class="toggle-arrows" ng-click="toggleRoomExlusionSettings(!openRoomExclusionSettings)">
 		                                <img class="toggle-down" src="/assets/cssimg/arrow-down.png">
