CICO-34407 Room number search for nightly diary

--- a/rover/partials/nightlyDiary/rvNightlyDiaryRoomNumberSearch.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiaryRoomNumberSearch.html
@@ -1,8 +1,6 @@
 <!-- Room Search -->
-<div class="grid-room-search" ng-controller="rvNightlyDiaryRoomNumberSearchController">
-    <button class="clear-query"> <!-- Add class 'visible' when searching. Tap clears L33 value and removes search. -->
-        <span class="icons icon-clear-search">Clear query</span>
-    </button>
-    <!-- Add class .hidden when edit screen is displayed -->
-    <input type="text" placeholder="Go to Room No." value="">
-</div>
+<button class="clear-query" ng-click="clearResults()" ng-class="{'visible': diaryData.textInQueryBox.length>1}"> <!-- Add class 'visible' when searching. Tap clears L33 value and removes search. -->
+	<span class="icons icon-clear-search">Clear query</span>
+</button>
+<!-- Add class .hidden when edit screen is displayed -->
+<input type="search" placeholder="Go to Room No." ng-change="queryEntered()" ng-model="diaryData.textInQueryBox" >
