--- a/rover/partials/nightlyDiary/rvNightlyDiary.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiary.html
@@ -12,7 +12,7 @@
         <!-- Room Search + Timeline -->
         <div class="grid-timeline">
 
-            <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryRoomSearch.html'"></div>
+            <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryRoomNumberSearch.html'" class="grid-room-search" ng-controller="rvNightlyDiaryRoomNumberSearchController"></div>
             
             <div ng-include="'/assets/partials/nightlyDiary/rvNightlyDiaryTimeline.html'"></div>
 
@@ -23,15 +23,13 @@
         </div>
 
         <!-- Room Search Results -->
-        <div class="grid-room-search-results hidden"> <!-- Add class 'visible' to show -->
+        <div class="grid-room-search-results" ng-show="diaryData.showSearchResultsArea" ng-class="{'visible': diaryData.showSearchResultsArea}">
             <div class="wrapper">
-                <div class="room">
-                    <span class="room-number {HK status or 'out' if OOO/OOS}">
-                        {Room No} <!-- Highlight search query like this: <span class="highlight">{Query}</span> -->
+                <div class="room" ng-repeat="row in diaryData.roomNumberSearchResults">
+                    <span class="room-number {HK status or 'out' if OOO/OOS}" ng-bind-html="row.room_no | highlight:diaryData.textInQueryBox:false">
                     </span>
-                    <span class="room-type">{Room Type}</span>
+                    <span class="room-type">{{row.room_type_name}}</span>
                 </div>
-                ... repeat for every result
             </div>
         </div>
 
